--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Music App</string>
     <string name="playing">Playing</string>
+    <string name="_1">1</string>
 </resources>
